# simply-audio

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
docs/pages/: getting_started.md  mainpage.md
examples/: CMakeLists.txt  threading.cc
src/: init.cpp  init.hpp  threads.cpp  threads.hpp  utils.cpp  utils.hpp
